7. it's called legacy code for a reason/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cobol-banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cobol-banking
  template:
    metadata:
      labels:
        app: cobol-banking
    spec:
      containers:
      - name: cobol-app-container
        image: reletz/cobol-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cobol-banking-service
spec:
  type: ClusterIP
  selector:
    app: cobol-banking
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  type: NodePort
  selector:
    app: nginx-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30008
